<?xml version="1.0" encoding="utf-8"?>
<resources>
  
  <string name="app_name">StartX</string>
  <string name="license">Free Copyright for FSF 2014</string>
  
  <string name="expertmode">Expert Mode Selection</string>
  <string name="title_expert_mode">Expert Mode</string>
  <string name="summary_expert_mode">Expert Mode</string>

  <string name="preferences">Preferences</string>
  <string name="screen_preferences">Screen</string>
  <string name="pref_statusbar">1</string>
  
  <string name="title_statusbar_preference">Status bar</string>
  <string name="summary_statusbar_preference">Show/hide status bar.</string>
  <string name="dialog_title_statusbar_preference">Status bar</string>

  <string name="slackware_preference">Slackware preferences</string>
  <string name="slackware_partition">/dev/block/mmcblk1p1</string>
  <string name="title_slackware_partition">Slackware partition</string>
  <string name="summary_slackware_partition">Parition where slackware is installed</string>
  <string name="dialog_title_slackware_partition">Slackware partition selection</string>

  <string name="slackware_partition_type">ext4</string>
  <string name="title_slackware_partition_type">Select Slackware Partition Type</string>
  <string name="summary_slackware_partition_type">Partition type of slacware</string>
  <string name="dialog_title_slackware_partition_type">Slackware Partition Dialog</string>
    
  <string name="slackware_mount_dir">/data/local/tmp/sdcard</string>
  <string name="title_slackware_mount_dir">Mount point for slackware</string>
  <string name="summary_slackware_mount_dir">Mount point for slackware</string>
  <string name="dialog_title_slackware_mount_dir">Dialog Mount point slackware</string>

 <string name="slackware_root_dir">/data/local/tmp/slackware</string>
  <string name="title_slackware_root_dir">Root for slackware</string>
  <string name="summary_slackware_root_dir">Root for slackware</string>
  <string name="dialog_title_slackware_root_dir">Dialog Root slackware</string>

  <string name="shell_preferences">su -</string>
  <string name="title_shell_preference">Startx command</string>
  <string name="summary_shell_preference">Specify the startx command.</string>
  <string name="dialog_title_shell_preference">startx commadn</string>

  <string name="startx_script_preference">startx script settings</string>
  <string name="startx_script_name">startx.sh</string>
  <string name="title_startx_script_name">startx script name</string>
  <string name="summary_startx_script_name">Name for the startx script</string>
  <string name="dialog_title_startx_script_name">startx script name dialog</string>
  
  <string name="startx_script_dir">/data/local/tmp</string>
  <string name="title_startx_script_dir">startx script dir</string>
  <string name="summary_startx_script_dir">Directory for the startx script</string>
  <string name="dialog_title_startx_script_dir">startx script dir dialog</string>

  <string name="title_install_slackware">Install Slackware</string>
  <string name="summary_install_slackware">Install Slackware</string>

  <string name="slackware_install_script">slackware_install.sh</string>
  <string name="slackware_source_dir">/slackware-14.1/slackware</string>
  <string name="title_slackware_source_dir">Slackware installation source</string>
  <string name="summary_slackware_source_dir">Slackware installation source</string>
  <string name="dialog_title_slackware_source_dir">Slackware installation source</string>
  

  <string name="slackware_series">a ap e k l n d x xap</string>
  <string name="title_slackware_series">Series for Slackware installation source</string>
  <string name="summary_slackware_series">Series for Slackware installation source</string>
  <string name="dialog_title_slackware_series">Series for Slackware installation source</string>
    
  <string name="pref_shell">/system/bin/sh -</string>
  
  <string name="help">Help</string>  

  <!-- actionbar -->
  <string name="action_preferences">Preference</string>
  <string name="action_settings">Action Settings</string>
  <string name="action_run">Run</string>
  <string name="action_cancel">Cancel</string>
</resources>
