<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:title="@string/screen_preferences">
    
    <ListPreference
        android:key="statusbar"
        android:defaultValue="@string/pref_statusbar"
        android:title="@string/title_statusbar_preference"
        android:summary="@string/summary_statusbar_preference"
        android:entries="@array/entries_statusbar_preference"
        android:entryValues="@array/entryvalues_statusbar_preference"
        android:dialogTitle="@string/dialog_title_statusbar_preference" />
  </PreferenceCategory>
  
  <PreferenceCategory
      android:title="@string/expertmode">
    
    <CheckBoxPreference
        android:key="expert_mode"
        android:defaultValue="false"
        android:title="@string/title_expert_mode"
        android:summary="@string/summary_expert_mode" />
      
  </PreferenceCategory>
    
    
  <PreferenceCategory
      android:title="@string/slackware_preference">
    
    <EditTextPreference
	android:key="slackware_partition"
	android:defaultValue="@string/slackware_partition"
	android:title="@string/title_slackware_partition"
	android:summary="@string/summary_slackware_partition"
	android:dialogTitle="@string/dialog_title_slackware_partition" />
    
    <!--
    <EditTextPreference
	android:key="slackware_partition_type"
	android:defaultValue="@string/slackware_partition_type"
	android:title="@string/title_slackware_partition_type"
	android:summary="@string/summary_slackware_partition_type"
	android:dialogTitle="@string/dialog_title_slackware_partition_type" />
    -->
    <ListPreference
        android:key="slackware_partition_type"
        android:defaultValue="@string/slackware_partition_type"
        android:title="@string/title_slackware_partition_type"
        android:summary="@string/summary_slackware_partition_type"
        android:entries="@array/entries_slackware_partition_type"
        android:entryValues="@array/entryvalues_slackware_partition_type"
        android:dialogTitle="@string/dialog_title_slackware_partition_type" />


    <EditTextPreference
	android:key="slackware_mount_dir"
	android:defaultValue="@string/slackware_mount_dir"
	android:title="@string/title_slackware_mount_dir"
	android:summary="@string/summary_slackware_mount_dir"
	android:dialogTitle="@string/dialog_title_slackware_mount_dir"/>
    
    <EditTextPreference
        android:key="slackware_root_dir"
        android:defaultValue="@string/slackware_root_dir"
        android:title="@string/title_slackware_root_dir"
        android:summary="@string/summary_slackware_root_dir"
        android:dialogTitle="@string/dialog_title_slackware_root_dir"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/startx_script_preference">
      
      <EditTextPreference
	  android:key="startx_script_name"
	  android:defaultValue="@string/startx_script_name"
	  android:title="@string/title_startx_script_name"
	  android:summary="@string/summary_startx_script_name"
	  android:dialogTitle="@string/dialog_title_startx_script_name" />
      
      <EditTextPreference
	  android:key="startx_script_dir"
	  android:defaultValue="@string/startx_script_dir"
	  android:title="@string/title_startx_script_dir"
	  android:summary="@string/summary_startx_script_dir"
	  android:dialogTitle="@string/dialog_title_startx_script_dir" />

      <EditTextPreference
          android:key="shell"
          android:defaultValue="@string/pref_shell"
          android:title="@string/title_shell_preference"
          android:summary="@string/summary_shell_preference"
          android:dialogTitle="@string/dialog_title_shell_preference" />
      
    </PreferenceCategory>
    
    <PreferenceCategory>

   <CheckBoxPreference
        android:key="install_slackware"
        android:defaultValue="false"
        android:title="@string/title_install_slackware"
        android:summary="@string/summary_install_slackware" />

      <EditTextPreference
	  android:key="slackware_source_dir"
	  android:defaultValue="@string/slackware_source_dir"
          android:title="@string/title_slackware_source_dir"
          android:summary="@string/summary_slackware_source_dir"
          android:dialogTitle="@string/dialog_title_slackware_source_dir" />
      <EditTextPreference
	  android:key="slackware_series"
	  android:defaultValue="@string/slackware_series"
          android:title="@string/title_slackware_series"
          android:summary="@string/summary_slackware_series"
          android:dialogTitle="@string/dialog_title_slackware_series" />
    </PreferenceCategory>
</PreferenceScreen>




