<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_preferences"
          android:title="@string/action_preferences"
          android:icon="@drawable/ic_action_settings" 
          android:showAsAction="always" />

    <item android:id="@+id/action_run"
          android:title="@string/action_run"
          android:icon="@drawable/action_xorg" 
          android:showAsAction="always" />

    <item android:id="@+id/action_cancel"
          android:title="@string/action_cancel"
          android:icon="@drawable/ic_action_cancel" 
          android:showAsAction="always" />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@drawable/ic_action_cancel" 
          android:showAsAction="never" />
    
</menu>
